--- a/src/pages/games/Games.css
+++ b/src/pages/games/Games.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 600px) {
   .GamesWrapper {
-    width: 80%;
+    width: 90%;
   }
 }
 
